Perkin-UAT/force-app/main/default/objects/User/fields/Sales_Region__c.field-meta.xml
<CustomField>
    <fullName>Sales_Region__c</fullName>
    <description>One level above local Sales Team and one level below Territory</description>
    <label>Sales Region</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sub_Region__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Americas</fullName>
            </value>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>Benelux</fullName>
            </value>
            <value>
                <fullName>CA10 AS Canada</fullName>
            </value>
            <value>
                <fullName>CA10 Molecular</fullName>
            </value>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>DEA Cluster</fullName>
            </value>
            <value>
                <fullName>EBE2 Belgium</fullName>
            </value>
            <value>
                <fullName>ECH2 / EES2 / EFR2 - Leader</fullName>
            </value>
            <value>
                <fullName>ECH2 Switzerland</fullName>
            </value>
            <value>
                <fullName>EES2 Spain</fullName>
            </value>
            <value>
                <fullName>EFR2 France</fullName>
            </value>
            <value>
                <fullName>EIT2 Italy</fullName>
            </value>
            <value>
                <fullName>GAE Group</fullName>
            </value>
            <value>
                <fullName>GDS Americas</fullName>
            </value>
            <value>
                <fullName>Hong Kong</fullName>
            </value>
            <value>
                <fullName>Indonesia</fullName>
            </value>
            <value>
                <fullName>Islands Cluster</fullName>
            </value>
            <value>
                <fullName>Japan</fullName>
            </value>
            <value>
                <fullName>Korea</fullName>
            </value>
            <value>
                <fullName>LA North</fullName>
            </value>
            <value>
                <fullName>LA South</fullName>
            </value>
            <value>
                <fullName>Malaysia</fullName>
            </value>
            <value>
                <fullName>Philippines</fullName>
            </value>
            <value>
                <fullName>SEMEA Cluster</fullName>
            </value>
            <value>
                <fullName>Singapore</fullName>
            </value>
            <value>
                <fullName>Taiwan</fullName>
            </value>
            <value>
                <fullName>Telemarketing</fullName>
            </value>
            <value>
                <fullName>Thailand</fullName>
            </value>
            <value>
                <fullName>United Kingdom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>