Perkin-UAT/force-app/main/default/objects/User/fields/Sales_Team__c.field-meta.xml
<CustomField>
    <fullName>Sales_Team__c</fullName>
    <description>Name given to local sales district. Lowest level of the Territory - Region - Sales Team hierarchy</description>
    <label>Sales Team</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sales_Region__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>US NE Team CT</fullName>
            </value>
            <value>
                <fullName>US NE Team Mass</fullName>
            </value>
            <value>
                <fullName>US NE Team NNJ</fullName>
            </value>
            <value>
                <fullName>US NE Team CNJ</fullName>
            </value>
            <value>
                <fullName>US NE Team Capital</fullName>
            </value>
            <value>
                <fullName>US NE Team Penn</fullName>
            </value>
            <value>
                <fullName>US SE Team Florida</fullName>
            </value>
            <value>
                <fullName>US SE Team Atlanta</fullName>
            </value>
            <value>
                <fullName>US SE Team Tennessee</fullName>
            </value>
            <value>
                <fullName>US SE Team Texas</fullName>
            </value>
            <value>
                <fullName>US10 AS MidWest</fullName>
            </value>
            <value>
                <fullName>US MW Team Pittsburgh</fullName>
            </value>
            <value>
                <fullName>US10 AS West</fullName>
            </value>
            <value>
                <fullName>US West Team Henrickson</fullName>
            </value>
            <value>
                <fullName>CA10 Analytical</fullName>
            </value>
            <value>
                <fullName>CA10 LS Instrument</fullName>
            </value>
            <value>
                <fullName>CA10 Reagents</fullName>
            </value>
            <value>
                <fullName>Northern - EMEA - Islands</fullName>
            </value>
            <value>
                <fullName>Central - EMEA - Islands</fullName>
            </value>
            <value>
                <fullName>Southern - EMEA - Islands</fullName>
            </value>
            <value>
                <fullName>UK GDS</fullName>
            </value>
            <value>
                <fullName>Belgium</fullName>
            </value>
            <value>
                <fullName>Denmark</fullName>
            </value>
            <value>
                <fullName>Finland</fullName>
            </value>
            <value>
                <fullName>Netherlands</fullName>
            </value>
            <value>
                <fullName>Norway</fullName>
            </value>
            <value>
                <fullName>Sweden</fullName>
            </value>
            <value>
                <fullName>Ben/Nordics GDS</fullName>
            </value>
            <value>
                <fullName>Germany North East</fullName>
            </value>
            <value>
                <fullName>Germany South</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>