Perkin-UAT/force-app/main/default/objects/User/fields/SAPRepId__c.field-meta.xml
<CustomField>
    <fullName>SAPRepId__c</fullName>
    <description>this is the SAP Sales Rep ID. It is populated via automation, or manually</description>
    <externalId>true</externalId>
    <inlineHelpText>this is the SAP Sales Rep ID. It is populated via automation, or manually</inlineHelpText>
    <label>SAP Rep Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>