Perkin-UAT/force-app/main/default/objects/User/fields/SMAX_PS_CompanyCode__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_CompanyCode__c</fullName>
    <description>Used to limit Stock Transfer to a Technician&#39;s Company Code.</description>
    <inlineHelpText>Used to limit Stock Transfer to a Technician&#39;s Company Code.</inlineHelpText>
    <label>Company Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>