Perkin-UAT/force-app/main/default/objects/User/fields/SMAX_PS_Is_Tier_2_Dispatcher__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Is_Tier_2_Dispatcher__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Provides access to the &#39;dispatch technician&#39; button for specific Tier 2 users</description>
    <inlineHelpText>Provides access to the &#39;dispatch technician&#39; button Tier 2 users</inlineHelpText>
    <label>Is Tier 2 Dispatcher</label>
    <type>Checkbox</type>
</CustomField>