Perkin-UAT/force-app/main/default/objects/User/fields/SMAX_PS_Maintenance_Plant__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Maintenance_Plant__c</fullName>
    <description>Denotes the maintenance plant that the user has access to</description>
    <inlineHelpText>Denotes the maintenance plant that the user has access to</inlineHelpText>
    <label>Maintenance Plant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>