Perkin-UAT/force-app/main/default/objects/User/fields/SMAX_PS_Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Sales_Org__c</fullName>
    <description>Sales org for technician used in download criteria for product stock</description>
    <inlineHelpText>Sales org for technician used in download criteria for product stock</inlineHelpText>
    <label>Sales Org</label>
    <length>255</length>
    <type>Text</type>
</CustomField>