Perkin-UAT/force-app/main/default/objects/User/fields/Sub_Region__c.field-meta.xml
<CustomField>
    <fullName>Sub_Region__c</fullName>
    <label>Sub-Region</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Region__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>AUSTRALIA</fullName>
            </value>
            <value>
                <fullName>CANADA</fullName>
            </value>
            <value>
                <fullName>CHINA</fullName>
            </value>
            <value>
                <fullName>EUROPE</fullName>
            </value>
            <value>
                <fullName>INDIA</fullName>
            </value>
            <value>
                <fullName>INDONESIA</fullName>
            </value>
            <value>
                <fullName>ISRAEL</fullName>
            </value>
            <value>
                <fullName>JAPAN</fullName>
            </value>
            <value>
                <fullName>KOREA, REPUBLIC OF</fullName>
            </value>
            <value>
                <fullName>KOSEA</fullName>
            </value>
            <value>
                <fullName>LATIN AMERICA</fullName>
            </value>
            <value>
                <fullName>MALAYSIA</fullName>
            </value>
            <value>
                <fullName>NORTH AMERICA</fullName>
            </value>
            <value>
                <fullName>PHILIPPINES</fullName>
            </value>
            <value>
                <fullName>SINGAPORE</fullName>
            </value>
            <value>
                <fullName>SOUTH AMERICA</fullName>
            </value>
            <value>
                <fullName>SOUTH ASIA</fullName>
            </value>
            <value>
                <fullName>SOUTH PAC</fullName>
            </value>
            <value>
                <fullName>THAILAND</fullName>
            </value>
            <value>
                <fullName>UNITED STATES</fullName>
            </value>
            <value>
                <fullName>VIETNAM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>