Perkin-UAT/force-app/main/default/objects/User/fields/User_SFDC_Group__c.field-meta.xml
<CustomField>
    <fullName>User_SFDC_Group__c</fullName>
    <inlineHelpText>Field used to help filter the list of SFDC users according to their use of the software. Helpful when sending mass emails to groups of specific users</inlineHelpText>
    <label>User SFDC Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Normal User</fullName>
                <default>true</default>
                <label>Normal User</label>
            </value>
            <value>
                <fullName>Power User</fullName>
            </value>
            <value>
                <fullName>SBE Sales Operations</fullName>
            </value>
            <value>
                <fullName>SBE Mrkt Operations</fullName>
            </value>
            <value>
                <fullName>SBE Administrator</fullName>
            </value>
            <value>
                <fullName>System Administrator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>