Perkin-UAT/force-app/main/default/objects/User/validationRules/Restrict_Editing_GeoLevel.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Editing_GeoLevel</fullName>
    <active>true</active>
    <description>prevent users from changing the geography level</description>
    <errorConditionFormula>AND(
   OR( ISCHANGED( GeographyLevel__c )
      , ISCHANGED(GeographyValue__c )
     )
   , AND(
          $User.Id &lt;&gt;  ManagerId 
        , NOT($Permission.C_PERM_6110_Edit_User_Territory_Region_ISO) 
       )
   )</errorConditionFormula>
    <errorDisplayField>GeographyLevel__c</errorDisplayField>
    <errorMessage>V.RULE_USER_003: Please ask a GCE team member to update your Geography level</errorMessage>
</ValidationRule>