Perkin-UAT/force-app/main/default/objects/User/listViews/AES_Active_SFDC_and_SVMX_Users.listView-meta.xml
<ListView>
    <fullName>AES_Active_SFDC_and_SVMX_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Owned_by_Company__c</field>
        <operation>equals</operation>
        <value>AES,TBD</value>
    </filters>
    <label>AES Active SFDC and SVMX Users</label>
    <language>en_US</language>
    <sharedTo>
        <role>SFDC_GLOBAL_Level</role>
    </sharedTo>
</ListView>