Perkin-UAT/force-app/main/default/objects/User/listViews/LS_Core.listView-meta.xml
<ListView>
    <fullName>LS_Core</fullName>
    <booleanFilter>1 OR 2 OR 3 OR 4 OR 5 OR 6</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.USERNAME</field>
        <operation>contains</operation>
        <value>ALWYN.LIM@,andrew.zorn@,bhadresh.panchal@,david.semanske@</value>
    </filters>
    <filters>
        <field>CORE.USERS.USERNAME</field>
        <operation>contains</operation>
        <value>ellen.casella@,ewajoanna.padykula@,james.geiger@,javier.perez@</value>
    </filters>
    <filters>
        <field>CORE.USERS.USERNAME</field>
        <operation>contains</operation>
        <value>katarzyna.szlachta@,linda.sgalelana@,martin.stancek@,michel.pampaloni@</value>
    </filters>
    <filters>
        <field>CORE.USERS.USERNAME</field>
        <operation>contains</operation>
        <value>naomi.samoray@,paul.jeffrey@,randy.wang@,sameer.verma@,seshnee.pillay@</value>
    </filters>
    <filters>
        <field>CORE.USERS.USERNAME</field>
        <operation>contains</operation>
        <value>sherri.naughton@,tiina.vierjoki@,vibha.bhatia@,WANDA.WANG@,weina.wang@</value>
    </filters>
    <filters>
        <field>CORE.USERS.USERNAME</field>
        <operation>contains</operation>
        <value>ZHONG-YU.WANG@,michel.pampaloni@,jennifer.sonntag@,elisabeth.ruettimann@</value>
    </filters>
    <label>LS Core</label>
    <language>en_US</language>
</ListView>