Perkin-UAT/force-app/main/default/objects/User/listViews/ServiceMax_Users_Read_Only.listView-meta.xml
<ListView>
    <fullName>ServiceMax_Users_Read_Only</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>PKI_GBL_Job_Family__c</columns>
    <columns>PKI_GBL_Sub_function__c</columns>
    <columns>SMAX_PS_CompanyCode__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>startsWith</operation>
        <value>SVMX PS - Read Only</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>ServiceMax Users_Read_Only</label>
    <language>en_US</language>
</ListView>