Perkin-UAT/force-app/main/default/objects/User/listViews/Team_GCE.listView-meta.xml
<ListView>
    <fullName>Team_GCE</fullName>
    <booleanFilter>2 AND (1  OR 3)</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.USERNAME</field>
        <operation>contains</operation>
        <value>jodi.vaughn,kindig,vibha.bhatia,jaigan,patrick.lapointe,thibaud.roudet</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.USERS.USERNAME</field>
        <operation>contains</operation>
        <value>raza,richard.flah,david.sauze,kosheff,upkes,april.ward,cassandra.cook,thibaud.ro</value>
    </filters>
    <label>Team: GCE</label>
    <language>en_US</language>
</ListView>