Perkin-UAT/force-app/main/default/objects/User/listViews/Team_LDR.listView-meta.xml
<ListView>
    <fullName>Team_LDR</fullName>
    <booleanFilter>1 AND (2 OR 3)</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>FULL_NAME</field>
        <operation>contains</operation>
        <value>Rich Flaherty,Mark Hanscom,Lei Wang</value>
    </filters>
    <filters>
        <field>CORE.USERS.EMAIL</field>
        <operation>contains</operation>
        <value>lei.wang3,mark.hanscom,richard.flaherty</value>
    </filters>
    <label>Team: LDR</label>
    <language>en_US</language>
</ListView>