Perkin-UAT/force-app/main/default/objects/User/listViews/Team_SFDC_b.listView-meta.xml
<ListView>
    <fullName>Team_SFDC_b</fullName>
    <booleanFilter>1 AND 4 AND ( 2 OR 3)</booleanFilter>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>fxProfileName__c</field>
        <operation>contains</operation>
        <value>SFDC Support</value>
    </filters>
    <filters>
        <field>fxManagerLine__c</field>
        <operation>contains</operation>
        <value>Brad Durbin</value>
    </filters>
    <filters>
        <field>fxProfileName__c</field>
        <operation>notContain</operation>
        <value>Integration</value>
    </filters>
    <label>Team: SFDC</label>
    <language>en_US</language>
</ListView>