Perkin-UAT/force-app/main/default/objects/User/listViews/Team_SFDC_Core.listView-meta.xml
<ListView>
    <fullName>Team_SFDC_Core</fullName>
    <booleanFilter>(1 AND 2 AND 3) OR (1 AND 3)</booleanFilter>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>fxManagerLine__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>fxManagerLine__c</field>
        <operation>contains</operation>
        <value>Brad Durbin</value>
    </filters>
    <filters>
        <field>fxProfileName__c</field>
        <operation>contains</operation>
        <value>SFDC Support</value>
    </filters>
    <label>Team: SFDC Core</label>
    <language>en_US</language>
</ListView>