Perkin-UAT/force-app/main/default/objects/User/listViews/USERS_All.listView-meta.xml
<ListView>
    <fullName>USERS_All</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>fxUserId18__c</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>CORE.USERS.FORECAST_ENABLED</columns>
    <columns>Territory__c</columns>
    <columns>CORE.USERS.TITLE</columns>
    <filterScope>Everything</filterScope>
    <label>USERS: All</label>
    <language>en_US</language>
</ListView>